# parrot-script

./: .env.example  .gitignore  README.md  meeting_assistant_plan.md  pyproject.toml  read_db.py  read_db_async.py  requirements.txt  run_dev.sh  task.md  test_bot.py
backend/: assistants.py  config.py  main.py
backend/api/: auth.py  server.py  websocket.py
backend/audio/: capture.py  devices.py  sources.py  vad.py
backend/automation/: assistant_bot.py  setup_bot_profile.py
backend/core/: events.py  exceptions.py  export.py  pipeline.py  pkg_resources_shim.py  preflight.py
backend/diarization/: audio.py  embeddings.py  speaker_cluster.py
backend/llm/: agent_service.py  chunker.py  prompts.py  summarizer.py
backend/native/: __init__.py  service.py
backend/storage/: db.py  vector_store.py
backend/transcription/: models.py  whisper_stream.py
backend/video/: video_capture.py
docs/: README.md  agent-guide.md  architecture.md  backend.md  file-index.md  frontend.md  meeting-modes-plan.md  operations.md
frontend/: index.html  new_return.txt  package-lock.json  patch_app.py  patch_lines.py  tsconfig.tsbuildinfo
frontend/react-app/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
scratch/: test_db.py  test_error.py  test_import.py  test_wav.py
scripts/: list_audio_devices.py  list_video_devices.py  start_meeting.sh  test_ollama.py  test_whisper.py
tests/: test_api.py  test_assistants.py  test_audio.py  test_audio_capture.py  test_diarization.py  test_integration.py  test_native_service.py  test_transcription.py  test_video_capture.py
(+44 files in other folders)
