[project]
name = "parrot-script"
version = "1.0.0"
description = "Local-first meeting transcription and summarization stack"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests that require external services or fixtures",
]
